Imported external date picker which now consolelogs and fixed styling for overflow events

--- a/src/App.css
+++ b/src/App.css
@@ -245,7 +245,7 @@
   left: 0;
   height: 6.25vh;
   margin-top: 2px;
-  border-radius: 3px;
+  border-radius: 3px 3px 0 0;
 }
 
 .Event p {
